language/move-lang/tests/move_check/parser/module_struct_after_func.exp
error: 

   ┌── tests/move_check/parsing/module_struct_after_func.move:4:5 ───
   │
 4 │     struct S {}
   │     ^^^^^^ Unrecognized Token: struct
   ·
 4 │     struct S {}
   │     ------ Expected:  "native", "public", "}", r#"[a-zA-Z_][a-zA-Z0-9_]*"#, r#"[a-zA-Z_][a-zA-Z0-9_]*<"#,
   │

