language/move-lang/tests/move_check/parser/module_struct_after_func.move
module M {
    fn() {}
    // Struct declarations must come before function declarations.
    struct S {}
}
